--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,9 +24,8 @@
         
         {% render 'meta-tags' %}    
     
-
-        <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
-        <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
+        <script src="{{ 'vue.global.js' | asset_url }}" defer="defer"></script>
+        {% comment %} <script src="{{ 'vue.global.prod.js' | asset_url }}" defer="defer"></script> {% endcomment %}
         <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     
         {{ content_for_header }}    
@@ -45,7 +44,7 @@
         <a class="skip-to-content-link button visually-hidden" href="#MainContent">
           {{ 'accessibility.skip_to_text' | t }}
         </a>
-
+        <button>${message}</button>
         
         {% sections 'header-group' %}
                 
