--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -45,17 +45,19 @@
           {{ 'accessibility.skip_to_text' | t }}
         </a>        
         
-        {% sections 'header-group' %}
+        {% comment %} {% sections 'header-group' %} {% endcomment %}
+
+        {% section "announcement-bar" %}
                 
         <main id="MainContent" class="content-for-layout focus-none" role="main">
           {{ content_for_layout }}
         </main>
     
-        {% sections 'footer-group' %}
+        {% comment %} {% sections 'footer-group' %} {% endcomment %}
 
-        {% sections 'drawer-group' %}
+        {% comment %} {% sections 'drawer-group' %} {% endcomment %}
 
-        {% sections 'overlay' %}
+        {% comment %} {% sections 'overlay' %} {% endcomment %}
     
         <ul hidden>
           <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
