--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -48,6 +48,7 @@
         {% comment %} {% sections 'header-group' %} {% endcomment %}
 
         {% section "announcement-bar" %}
+        {% section "header" %}
                 
         <main id="MainContent" class="content-for-layout focus-none" role="main">
           {{ content_for_layout }}
