--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,6 +49,7 @@
 
         {% section "announcement-bar" %}
         {% section "header" %}
+        {% section "notification-bar" %}
                 
         <main id="MainContent" class="content-for-layout focus-none" role="main">
           {{ content_for_layout }}
