shopify-theme-skeleton notification-bar section

--- a/sections/notification-bar.liquid
+++ b/sections/notification-bar.liquid
@@ -2,7 +2,7 @@
 <div class="yummuy_only_text--wrp">
   <span class="blinking_circle"></span>
   <p>{{ settings.notification_text }}
-  New:
+  Nieuw:
   <a href='/products/sleep' title='Sleep'>Yummygums Sleep</a> 
   ZzzzZzzZ 🌚
   </p>
