--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,7 +49,8 @@
 
     {% section 'announcement-bar' %}
     {% section 'header' %}
-
+    {% section 'logo-carousel' %}
+    
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
     </main>
