--- a/sections/notification-bar.liquid
+++ b/sections/notification-bar.liquid
@@ -15,8 +15,12 @@
     {
       "type": "text",
       "label": "Notification Text",
-      "id": "notification_text",
-      "default": "This is notification bar"
+      "id": "notification_text"
+    }
+  ],
+  "presets": [
+    {
+      "name": "Notification-bar"
     }
   ]
 }
