creating multipurpose section

--- a/assets/base.css
+++ b/assets/base.css
@@ -150,3 +150,27 @@ img {
   clip: rect(0 0 0 0);
   word-wrap: normal !important;
 }
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.inline {
+  display: inline;
+}
+
+.none {
+  display: none;
+}
