Mobile Responsive + Colors

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -32,7 +32,7 @@
                 </div>
                 <h3>{{ block.settings.title }}</h3>
                 <p>{{ block.settings.description }}</p>
-                <p>€{{ block.settings.price }} <span><s>€{{ block.settings.strikeThroughPrice }}</s></span></p>
+                <p id="price">€{{ block.settings.price }} <span id="strikePrice"><s>€{{ block.settings.strikeThroughPrice }}</s></span></p>
                     
                
             </div>
