--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -51,54 +51,36 @@
     font-weight: medium;
 }
 
-/* .tabs {
-    margin: 40px 0;
-    
-} */
 
 /* Additional styles for active link state */
 .tabs {
     display: flex;
     flex-wrap: wrap;
-    /* Allow tabs to wrap on smaller screens */
     justify-content: center;
-    /* Center tabs container */
     align-items: center;
-    /* Align tabs vertically */
     margin: 20px 0;
     padding: 0;
-    /* Remove padding to allow tabs to fit better */
     list-style-type: none;
-    /* If your tabs are in a list */
 }
 
 .tab-link {
     padding: 10px 15px;
-    /* Increase padding for a larger touch area */
     margin: 5px;
-    /* Add some space between tabs */
     border: 1px solid #ccc;
     border-radius: 3px;
     background-color: #f9f9f9;
-    /* Light background color */
     font-size: 14px;
-    /* Adjust font size for mobile readability */
     text-align: center;
-    /* Center text inside the tab */
     text-decoration: none;
-    /* Remove underline from links */
     color: #333;
-    /* Tab text color */
     transition: background-color 0.3s;
-    /* Smooth background transition on hover */
 }
 
 .tab-link:hover,
 .tab-link.active {
     background-color: #e0e0e0;
-    /* Slightly darker background on hover/active */
     color: #000;
-    /* Text color for active/hover state */
+    text-decoration: none;
 }
 
 /* Container for all product cards */
@@ -179,9 +161,14 @@
 }
 
 /* Pricing style */
-.product-card .price {
+#price {
     font-weight: bold;
-    color: #000000 !important;
+    color: #000000;
+}
+
+#strikePrice{
+    font-weight: normal;
+    color: #666;
 }
 
 .product-card span{
@@ -231,19 +218,23 @@
         margin: 20px auto;
         padding: 0;
         width: 100%;
-        /* Full width on small screens */
     }
 
     .tab-link {
+        font-size: 13px;
         flex-grow: 1;
-        /* Tabs take equal width */
         text-overflow: ellipsis;
-        /* Handle long text in tabs */
         overflow: hidden;
-        /* Prevent text from overflowing */
         white-space: nowrap;
-        /* Keep text in a single line */
         padding: 3px 2px;
+    }
+
+    .product-card h3{
+        font-size: 16px;
+    }
+
+    .product-card p{
+        font-size: 13px;
     }
 
    
