--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -53,7 +53,7 @@
 
 
 /* Additional styles for active link state */
-.tabs {
+.tabsCSS {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -145,6 +145,18 @@
     cursor: pointer;
 }
 
+#categoryCSS{
+    margin: 10px 0;
+    padding: 2px 4px;
+    border: 1px solid gray;
+    border-radius: 20px;
+    width: fit-content;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 500;
+
+}
+
 /* Product title and description inside the card */
 .product-card h3 {
     margin: 0;
@@ -214,7 +226,7 @@
         font-size: 14px;
     }
 
-    .tabs {
+    .tabsCSS {
         margin: 20px auto;
         padding: 0;
         width: 100%;
