--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -27,7 +27,7 @@
         {% for block in section.blocks %}
             <div class="product-card" {{ block.shopify_attributes }} data-category="{{ block.settings.category | handle }}">
                 <div class="card-img">
-                    <img src="{{ block.settings.image | img_url: '300x300' }}" alt="{{ block.settings.title }}">
+                    <img src="{{ block.settings.image | img_url: '300x300' }}" alt="{{ block.settings.title }} loading="lazy"">
                     <div class="deal-tag"> DEAL - {{ block.settings.deal }} </div>
                 </div>
                 <p id="categoryCSS"> {{ block.settings.category }} </p>
